--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="votar-cal">
         <h2>If else in JavaScript</h2>
 
-        <h3>Find your Voter age in here</h3>
+        <h3>Find your voting age here</h3>
         <input type="text" id="age">
         <button id="submit">click</button>
         <p id="result"></p>
