--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>If else in JavaScript</h2>
 
         <h3>Find your voting age here</h3>
-        <input type="text" id="age">
+        <input type="text" id="age" placeholder="Type your age">
         <button id="submit">click</button>
         <p id="result"></p>
     </div>
