add or option in this code

--- a/jobcal.html
+++ b/jobcal.html
@@ -30,7 +30,7 @@
                 let nam = document.getElementById("nam").value;
                 let age = document.getElementById("age").value;
                 let exp = document.getElementById("exp").value;
-    
+            //when we try or condition then use || this symbol for that example ( age >= || exp >= 2)
                 if (age >= 18 && exp >= 2) {
                     document.getElementById("job-result").innerText = (" Yes! You are qualified.");
                 } else {
